--- a/dashboard/templates/dashboard_manager.html
+++ b/dashboard/templates/dashboard_manager.html
@@ -233,6 +233,11 @@
                                 <a href="/tickets/" class="nav-link">
                                     <span>Tickets</span>
                                 </a>
+                                {% if user.appRole == 'ADMIN' %}
+                                <a href="/admin/password-resets/" class="nav-link">
+                                    <span>Mots de passe</span>
+                                </a>
+                                {% endif %}
                             </nav>
                         </div>
                         <div class="flex items-center gap-8">
